update assets folder
fix on xcodebuild

--- a/src/assets/drivers/ios/Podfile
+++ b/src/assets/drivers/ios/Podfile
@@ -1,7 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
-target 'atsiosUITests' do
+target 'atsDriver' do
   inherit! :search_paths
   # Pods for testing
   pod 'Embassy'
