update build xml

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-SDK_HOME_WIN=/Users/magali/Documents/apache-flex-sdk-4.16.1
+SDK_HOME_WIN=/Applications/Adobe Flash Builder 4.7/sdks/4.16.1
 //SDK_HOME_WIN=C:/tools/ApacheFlexSDK_4.16.1_p32
 
 APP_NAME=AtsMobileStation
