--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ src/assets/tools/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+.actionScriptProperties
+.flexProperties
+build.properties
