--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
-SDK_HOME_WIN=/Applications/Adobe Flash Builder 4.7/sdks/4.16.1
-//SDK_HOME_WIN=C:/tools/ApacheFlexSDK_4.16.1_p32
+//SDK_HOME_WIN=/Applications/Adobe Flash Builder 4.7/sdks/4.16.1
+SDK_HOME_WIN=C:/flex/ApacheFlexSDK
 
 APP_NAME=AtsMobileStation
 APP_VERSION=1.0.1
