change android device run with worker process

--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,11 @@
 //SDK_HOME_WIN=/Applications/Adobe Flash Builder 4.7/sdks/4.16.1
-SDK_HOME_WIN=C:/flex/ApacheFlexSDK
+SDK_HOME_WIN=C:/tools/ApacheFlexSDK_4.16.1_p32
 
 APP_NAME=AtsMobileStation
-APP_VERSION=1.0.1
+APP_VERSION=1.0.2
 
 BIN_FOLDER=bin
+WORKERS_FOLDER=workers
 SRC_FOLDER=src
 MAIN_SOURCE_FILE=${APP_NAME}.mxml
 APP_DESCRIPTOR=${APP_NAME}-app.xml
