--- a/build.properties
+++ b/build.properties
@@ -5,7 +5,7 @@ APP_NAME=AtsMobileStation
 APP_VERSION=1.0.2
 
 BIN_FOLDER=bin
-WORKERS_FOLDER=workers
+WORKERS_BIN_FOLDER=workers_bin
 SRC_FOLDER=src
 MAIN_SOURCE_FILE=${APP_NAME}.mxml
 APP_DESCRIPTOR=${APP_NAME}-app.xml
