--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,14 @@ temp/
 .actionScriptProperties
 .flexProperties
 build.properties
+
+# Folder view configuration files
 .DS_Store
-.DS_Store?
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
