--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-SDK_HOME_WIN=/FlexSDK_1.16.1
+SDK_HOME_WIN=C:/FlexSdk
 //SDK_HOME_WIN=C:/tools/ApacheFlexSDK_4.16.1_p32
 
 APP_NAME=AtsMobileStation
