update process traitment for ios

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "as3mxml.sdk.framework": "c:\\FlexSdk"
+    "as3mxml.sdk.framework": "/Users/utilisateur/Documents/apache-flex-sdk-4.16.1"
 }
