--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "type": "swf",
             "request": "launch",
-            "name": "AtsMobileStation"
+            "name": "AtsMobileStation",
+            "preLaunchTask": "ActionScript: compile debug - asconfig.json"
         }
     ]
 }
