--- a/asconfig.json
+++ b/asconfig.json
@@ -7,7 +7,7 @@
 		"library-path": [
 			"libs"
 		],
-		"advanced-telemetry": true
+		"advanced-telemetry": false
 	},
 	"files": [
 		"src/AtsMobileStation.mxml"
