--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ Thumbs.db
 .Spotlight-V100
 .Trashes
 build.properties
+src/assets/tools/monaserver/MonaBase/lib/libMonaBase.dylib
+src/assets/tools/monaserver/MonaCore/lib/libMonaCore.dylib
