remove unnecessarry files

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
-SDK_HOME_WIN=/Users/macmini/Documents/FlexSDK/apache-flex-sdk-4.16.1
-//SDK_HOME_WIN=C:/tools/ApacheFlexSDK_4.16.1_p32
+//SDK_HOME_WIN=/Users/macmini/Documents/FlexSDK/apache-flex-sdk-4.16.1
+SDK_HOME_WIN=C:/tools/ApacheFlexSDK_4.16.1_p32
 
 APP_NAME=AtsMobileStation
 APP_VERSION=1.2.1
