--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ src/assets/tools/monaserver/work/lua51.dll
 *.dll
 *.exe
 src/assets/tools/monaserver/server/MonaServer
+src/assets/tools/monaserver/server/logs/log.0
