--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,10 @@
 //SDK_HOME_WIN=/Users/macmini/Documents/FlexSDK/apache-flex-sdk-4.16.1
 // SDK_HOME_WIN=C:/tools/ApacheFlexSDK_4.16.1_p32
-SDK_HOME_WIN=C:/FlexSdk
+FLEX_SDK_WIN=C:/FlexSdk
+FLEX_SDK_MACOS=/Users/agilitest2/Documents/FlexSDK/apache-flex-sdk-4.16.1
 
 APP_NAME=AtsMobileStation
-APP_VERSION=1.2.1
+APP_VERSION=1.2.2
 
 BIN_FOLDER=bin
 WORKERS_BIN_FOLDER=workers_bin
