--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ src/assets/tools/monaserver/work/lua51.dll
 *.exe
 src/assets/tools/monaserver/server/MonaServer
 src/assets/tools/monaserver/server/logs/log.0
+src/assets/tools/monaserver/libluajit-5.1.2.dylib
