new version of adb

--- a/build.xml
+++ b/build.xml
@@ -21,22 +21,27 @@
 	</target>
 
 	<target name="prepareBuildMacos" if="isMac">
+		<delete dir="src/assets/tools/monaserver/MonaBase"/>
+		<delete dir="src/assets/tools/monaserver/MonaCore"/>
+		<delete file="src/assets/tools/monaserver/server/MonaServer"/>
+		<delete file="src/assets/tools/monaserver/libluajit-5.1.2.dylib"/>
+			
 		<unzip src="tools/android/macos/adb.zip" dest="src/assets/tools/android"/>
 		<unzip src="tools/monaserver/macos/monaserver.zip" dest="src/assets/tools"/>
-		<copy file="tools/monaserver/libluajit-5.1.2.dylib" todir="src/assets/tools/monaserver"/>
+		<copy file="tools/monaserver/macos/libluajit-5.1.2.dylib" todir="src/assets/tools/monaserver"/>
 	</target>
 
 	<target name="prepareBuildWindows" if="isWindows">
-
+		<delete file="src/assets/tools/monaserver/server/Monaserver.exe"/>
+		<delete file="src/assets/tools/monaserver/server/lua51.dll"/>
+		
+		<unzip src="tools/android/windows/adb.zip" dest="src/assets/tools/android"/>
+		<unzip src="tools/monaserver/windows/monaserver.zip" dest="src/assets/tools/monaserver/server"/>
 	</target>
 
 	<target name="configure" depends="initMacOsProperties,initWindowsProperties">
 		<echo message="Prepare OS dependent libs and components"/>
 		<delete dir="src/assets/tools/android"/>
-		<delete dir="src/assets/tools/monaserver/MonaBase"/>
-		<delete dir="src/assets/tools/monaserver/MonaCore"/>
-		<delete dir="src/assets/tools/monaserver/server/Monaserver.exe"/>
-		<delete dir="src/assets/tools/monaserver/server/MonaServer"/>
 
 		<antcall target="prepareBuildMacos"/>
 		<antcall target="prepareBuildWindows"/>
