--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,7 @@
 	</target>
 
 	<target name="prepareBuildWindows" if="isWindows">
-		<delete file="src/assets/tools/python"/>
+		<delete dir="src/assets/tools/python"/>
 		<unzip src="tools/python/windows/python.zip" dest="src/assets/tools/python"/>
 			
 		<delete file="src/assets/tools/monaserver/server/Monaserver.exe"/>
@@ -121,7 +121,6 @@
 		   match="&lt;content&gt;(.*)&lt;/content&gt;"
 		   replace="&lt;content&gt;${APP_NAME}.swf&lt;/content&gt;">
 		</replaceregexp>
-
 	</target>
 		
 	<target name="package" depends="init.sdk, compile.project">
