--- a/src/assets/drivers/ios/atsios.xcodeproj/xcshareddata/xcschemes/atsios.xcscheme
+++ b/src/assets/drivers/ios/atsios.xcodeproj/xcshareddata/xcschemes/atsios.xcscheme
@@ -26,9 +26,22 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldUseLaunchSchemeArgsEnv = "NO"
       disableMainThreadChecker = "YES"
       systemAttachmentLifetime = "keepNever">
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "CUSTOM_PORT"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CUSTOM_PORT"
+            value = "lalalala"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <Testables>
          <TestableReference
             skipped = "NO">
